Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
 <form action='/checkout' method='POST'>
-  <p><label for='purchase'></label></p>
+  <p><label for='item'>Item:</label>
+  <input type='text' name='item' id='item'></p>
+  <input type='submit' value='Submit'>
 </form>
