--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <form action='/checkout' method='POST'>
   <p><label for='item'>Item:</label>
   <input type='text' name='item' id='item'></p>
-  <input type='submit' value='Submit'>
+  <input type='submit' value='Submit' id='submit'>
 </form>
